--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/vuetify": "^1.12.3",
     "nuxt": "^4.2.1",
+    "sass": "^1.94.2",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vuetify": "^3.11.2",
+    "vuetify-nuxt-module": "^0.18.8"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
